# NWiiRecomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SHOWCASE.md
.github/workflows/: build.yml
include/nwii/common/: endian.h
include/nwii/loader/: loader.h
nWiiAnalyzer/: CMakeLists.txt  README.md
nWiiAnalyzer/include/analyzer/: analyzer.h  dolphin_sigdb.h  signature_scanner.h
nWiiAnalyzer/include/ppc/: instruction.h
nWiiAnalyzer/src/: analyzer.cpp  dolphin_sigdb.cpp  signature_scanner.cpp
nWiiLoader/: CMakeLists.txt
nWiiLoader/include/loader/: loader.h
nWiiLoader/src/: loader.cpp
nWiiRecomp/: CMakeLists.txt  README.md
nWiiRecomp/include/recompiler/: recompiler.h  symbols.h
nWiiRecomp/src/: main.cpp  recompiler.cpp  symbols.cpp
nWiiRecomp/tests/: test_analyzer_recomp.cpp
nWiiRuntime/: CMakeLists.txt  README.md
nWiiRuntime/assets/: tev_uber.fs  tev_uber.vs
nWiiRuntime/include/common/: endian.h
nWiiRuntime/include/input/: input_manager.h  input_source.h
nWiiRuntime/include/loader/: loader.h
nWiiRuntime/include/runtime/: cafe_os.h  config.h  cpu_context.h  devices.h  event_scheduler.h  gx_command.h  gx_state.h  ios_device.h  ios_kernel.h  os_thread.h  texture_cache.h  texture_cache_gl.h  virtual_disc.h
nWiiRuntime/include/runtime/gx/: fifo_parser.h  renderer.h  tev_shader_gen.h
nWiiRuntime/include/runtime/hw/: hw.h  mmio_dispatcher.h
nWiiRuntime/include/runtime/platform/: gc_platform.h  platform.h  wii_platform.h
nWiiRuntime/src/: config.cpp  loader.cpp  main.cpp
nWiiRuntime/src/core/: config.cpp  event_scheduler.cpp  loader.cpp  main.cpp  os_hle_stubs.cpp
nWiiRuntime/src/hle/: ax.cpp  dvd.cpp  gx.cpp  interpreter.cpp  ios.cpp  ios_kernel.cpp  memory.cpp  mmio_dispatcher.cpp  os.cpp  pad.cpp  texture_cache.cpp  texture_cache_gl.cpp  virtual_disc.cpp
nWiiRuntime/src/hle/cafe/: cafe_os.cpp  latte_gpu.cpp
nWiiRuntime/src/hle/devices/: di_device.cpp  es_device.cpp  fs_device.cpp  stm_device.cpp  usb_device.cpp
nWiiRuntime/src/hle/gx/: fifo_parser.cpp  renderer.cpp  renderer_factory.cpp  renderer_gl.cpp  renderer_metal.mm  tev_shader_gen.cpp
nWiiRuntime/src/hle/hw/: hw_ai.cpp  hw_all.cpp  hw_di.cpp  hw_dsp.cpp  hw_ipc.cpp  hw_pi.cpp  hw_si.cpp  hw_vi.cpp
nWiiRuntime/src/hw/: hw_ai.cpp  hw_all.cpp  hw_cp.cpp  hw_di.cpp  hw_dsp.cpp  hw_exi.cpp  hw_ipc.cpp  hw_mi.cpp  hw_pe.cpp  hw_pi.cpp  hw_si.cpp  hw_vi.cpp  mmio_dispatcher.cpp
nWiiRuntime/src/input/: input_manager.cpp
nWiiRuntime/src/input/sources/: gamepad_source.cpp  gamepad_source.h  mouse_keyboard_source.cpp  mouse_keyboard_source.h  phone_source.cpp  phone_source.h
nWiiRuntime/src/platform/: gc_platform.cpp  platform.cpp  wii_platform.cpp
nWiiRuntime/src/platform/glad/include/glad/: glad.h
nWiiRuntime/src/platform/glad/src/: glad.c
nWiiStudio/: CMakeLists.txt  README.md
nWiiStudio/include/: GUI.hpp  StudioState.hpp
nWiiStudio/src/: GUI.cpp  main.cpp
nWiiStudio/src/ui/: StyleManager.cpp
scripts/: ExportSymbolsToCSV.java
src/analyzer/: CMakeLists.txt  main.cpp
src/loader/: CMakeLists.txt  loader.cpp
src/recompiler/: CMakeLists.txt  main.cpp  symbols.cpp
src/runtime/: main.cpp
wiki/: Build-Instructions.md  Home.md  Memory-Architecture.md  Recompiler-Pipeline.md  Runtime-Environment.md
